<resources>
    <string name="app_name" translatable="false">Cocotte</string>
    <string name="food_title_transition_name" translatable="false">food_title_transition</string>
    <string name="food_risk_transition_name" translatable="false">food_risk_transition</string>
    <string name="store_url" translatable="false">https://play.google.com/store/apps/details?id=%s</string>
    <string name="gcm_sender_id" translatable="false">22837129674</string>

    <!-- Content description -->
    <string name="category_cover_content_description">Image Catégorie</string>
    <string name="risk_icon_content_description">Icône risque</string>

    <!-- App -->
    <string name="all">Tous</string>
    <string name="search">Recherche</string>
    <string name="more">Plus</string>
    <string name="risk">Risque</string>
    <string name="no_risk">Aucun.</string>
    <string name="information">Information</string>
    <string name="no_information">Aucune.</string>
    <string name="disclaimer">Toutes ces recommandations sont données à titre indicatif, elles ne peuvent remplacer l\'avis de votre médecin.</string>
    <string name="empty">Autorisé</string>
    <string name="care">Faire attention</string>
    <string name="avoid">À éviter</string>
    <string name="favorite_icon">Icone favoris vide</string>
    <string name="favorite_empty">Vous pouvez retrouver ici les aliments que vous voulez ajouter en favoris.</string>
    <string name="favorites">Favoris</string>
    <string name="search_hint">Rechercher un aliment…</string>
    <string name="results">Résultats</string>
    <string name="search_no_match">Votre recherche n\'a donné aucun résultat.</string>
    <string name="suggest_food">Suggérer un élément</string>
    <string name="suggest_food_subject">[Suggestion Aliment]</string>
    <string name="filter">Filtre</string>
    <string name="categories">Catégories</string>

    <!-- Share -->
    <string name="share_list_foods" formatted="false">Voici la liste des aliments que j\'ai mis de côté et que je te partage :\n
        %s
        Cette liste provient de l\'application Cocotte qui conseille les femmes enceintes sur leur alimentation.</string>
    <string name="share_food_avoid">Tu sais que cet aliment est dangereux pendant la grossesse ? 🙃</string>
    <string name="share_food_care">Tu sais qu\'il faut faire attention à cet aliment pendant la grossesse ? 🙃</string>
    <string name="share_food_empty">Tu sais que cet aliment est autorisé pendant la grossesse ? 🙂</string>
    <string name="share_see_more" formatted="false">Pour voir plus d\'aliments 🍉🍭🥑 : %s</string>

    <!-- More -->
    <string name="support">Support</string>
    <string name="about">À propos</string>
    <string name="contact_us">Nous contacter</string>
    <string name="rate_app">Noter l\'application</string>
    <string name="share_app">Partager l\'application</string>
    <string name="made_by">Made with 💚 by Cocotte.</string>
    <string name="version">Ma version de Cocotte - %s (%s)</string>
    <string name="invalid_store_url">Impossible d\'ouvrir le Play Store.</string>
    <string name="share_app_subject">Fini les questions sur l’alimentation pendant la grossesse ☺️ 🍓</string>
    <string name="share_app_title">Partager l\'application :</string>
    <string name="send_email_title">Envoyer l\'e-mail :</string>
    <string name="contact_subject">[Retour Cocotte]</string>
</resources>
