<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/filter"
        app:showAsAction="always">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/all"
                    android:checked="true"
                    android:title="@string/all"/>
                <item
                    android:id="@+id/empty"
                    android:title="@string/empty"/>
                <item
                    android:id="@+id/care"
                    android:title="@string/care"/>
                <item
                    android:id="@+id/avoid"
                    android:title="@string/avoid"/>
            </group>
        </menu>
    </item>
</menu>