<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/food_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingEnd="16dp"
    android:paddingStart="16dp">

    <ImageView
        android:id="@+id/risk_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/risk_icon_content_description"
        android:transitionName="@string/food_risk_transition_name"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        android:transitionName="@string/food_title_transition_name"/>
</LinearLayout>
