<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/support"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="24dp"
        android:drawableStart="@drawable/ic_email_black_24px"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:text="@string/contact_us"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/share"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate"/>

    <TextView
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="24dp"
        android:drawableStart="@drawable/ic_star_black_24px"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:text="@string/rate_app"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/contact"
        app:layout_constraintStart_toStartOf="@+id/contact"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="spread"/>

    <TextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="24dp"
        android:drawableStart="@drawable/ic_share_black_24px"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:text="@string/share_app"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/rate"
        app:layout_constraintTop_toBottomOf="@+id/contact"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="66dp"/>

    <View
        android:id="@+id/border1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"/>

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/about"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"/>

    <TextView
        android:id="@+id/made_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/made_by"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about"
        app:layout_constraintVertical_chainStyle="spread"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/made_by"
        tools:layout_editor_absoluteX="0dp"
        tools:text="Test Version #128"/>

    <View
        android:id="@+id/border2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"/>

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/disclaimer"
        android:textColor="@color/text_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        tools:layout_editor_absoluteX="0dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79"/>
</android.support.constraint.ConstraintLayout>