<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/cover"
            android:orientation="vertical">

            <TextView
                android:id="@+id/food_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#2B2B2C"
                android:textSize="38sp"
                android:transitionName="@string/food_title_transition_name"
                tools:text="Totototot"/>

            <TextView
                android:id="@+id/danger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:textSize="18sp"
                android:transitionName="@string/food_risk_transition_name"
                tools:text="Totototot"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/cover"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/round_corners"
            android:contentDescription="@string/category_cover_content_description"
            android:padding="23dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/risk_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/risk"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"/>

    <TextView
        android:id="@+id/risk"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/no_risk"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/risk_title"/>

    <TextView
        android:id="@+id/information_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/information"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/information"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/no_information"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_title"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/disclaimer"
        android:textColor="@color/text_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border"
        app:layout_constraintBottom_toTopOf="@+id/guideline"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_favorite_icon"
        app:backgroundTint="@android:color/white"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/share"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_share_white_24dp"
        app:backgroundTint="@color/colorPrimary"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82"/>

</android.support.constraint.ConstraintLayout>